implement balance tracking and enhance expense splitting strategies