@@ -9,6 +9,7 @@ import com.lld.enums.SplitType;
 import com.lld.factory.SplitStrategyFactory;
 import com.lld.repository.GroupRepository;
 import com.lld.repository.UserRepository;
+import lombok.RequiredArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -16,60 +17,37 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
 
+@RequiredArgsConstructor
 public class SplitWiseService {
     private final UserRepository userRepository;
     private final GroupRepository groupRepository;
-    private Map<SplitType, SplitStrategy> splitStrategies;
+    private final Map<SplitType, SplitStrategy> splitStrategies;
+    private final ReentrantReadWriteLock lock = new ReentrantReadWriteLock();
 
-    public SplitWiseService(UserRepository userRepository, GroupRepository groupRepository) {
-        this.userRepository = userRepository;
-        this.groupRepository = groupRepository;
-        splitStrategies = new HashMap<>();
-        splitStrategies.put(SplitType.EQUAL, SplitStrategyFactory.createSplitStrategy(SplitType.EQUAL));
-        splitStrategies.put(SplitType.PERCENTAGE, SplitStrategyFactory.createSplitStrategy(SplitType.PERCENTAGE));
-        splitStrategies.put(SplitType.EXACT, SplitStrategyFactory.createSplitStrategy(SplitType.EXACT));
-    }
-
-    public synchronized void createExpense(ExpenseRequest expenseRequest) {
-        groupRepository.getGroupById(expenseRequest.getGroupId())
-                .ifPresent(group -> {
-                    Expense expense = splitStrategies.get(expenseRequest.getSplitType()).splitExpense(expenseRequest, group);
-                    group.addExpense(expense);
-                });
-    }
-
-    public double getBalance(String userA, String userB, String groupId) {
-        Optional<Group> groupOptional = groupRepository.getGroupById(groupId);
-        if (!groupOptional.isPresent()) {
-            throw new IllegalArgumentException("Group not found");
+    public void createExpense(ExpenseRequest expenseRequest) {
+        lock.writeLock().lock();
+        try {
+            groupRepository.getGroupById(expenseRequest.getGroupId())
+                    .ifPresent(group -> {
+                        Expense expense = splitStrategies.get(expenseRequest.getSplitType())
+                                .splitExpense(expenseRequest, group);
+                        group.addExpense(expense);
+                    });
+        } finally {
+            lock.writeLock().unlock();
         }
-        Group group = groupOptional.get();
-        return group.getExpenses()
-                .stream()
-                .filter(expense -> expense.getPaidBy().getUserId().equals(userA))
-                .map(expense -> expense.getBalances()
-                        .stream()
-                        .filter(balance -> balance.getPaidTo().getUserId().equals(userB))
-                        .map(Balance::getAmount)
-                        .reduce(0.0, Double::sum)
-                )
-                .reduce(0.0, Double::sum);
     }
 
-    /**
-     * Get net balances for a user across all groups they belong to (aggregate/global view).
-     * Returns a list of Balance objects where each balance represents money owed to/from another user.
-     * Positive amount means the other user owes this user, negative means this user owes the other.
-     *
-     * @param userId the user to get balances for
-     * @return list of net balances across all groups
-     */
+
     public List<Balance> getBalances(String userId) {
-        User user = userRepository.getUserById(userId);
-        if (user == null) {
-            return new ArrayList<>();
-        }
+        lock.readLock().lock();
+        try {
+            User user = userRepository.getUserById(userId);
+            if (user == null) {
+                return new ArrayList<>();
+            }
 
         Map<String, Double> aggregatedBalances = new HashMap<>();
 
@@ -93,13 +71,16 @@ public class SplitWiseService {
             }
         }
 
-        return aggregatedBalances.entrySet().stream()
-                .filter(entry -> Math.abs(entry.getValue()) > 0.01)
-                .map(entry -> Balance.builder()
-                        .paidTo(userRepository.getUserById(entry.getKey()))
-                        .amount(entry.getValue())
-                        .build())
-                .collect(Collectors.toList());
+            return aggregatedBalances.entrySet().stream()
+                    .filter(entry -> Math.abs(entry.getValue()) > 0.01)
+                    .map(entry -> Balance.builder()
+                            .paidTo(userRepository.getUserById(entry.getKey()))
+                            .amount(entry.getValue())
+                            .build())
+                    .toList();
+        } finally {
+            lock.readLock().unlock();
+        }
     }
 
     /**
@@ -110,31 +91,37 @@ public class SplitWiseService {
      * @return list of all expenses in the group
      */
     public List<Expense> getGroupExpenses(String groupId) {
-        Optional<Group> groupOptional = groupRepository.getGroupById(groupId);
-        return groupOptional.map(Group::getExpenses).orElseGet(ArrayList::new);
+        lock.readLock().lock();
+        try {
+            Optional<Group> groupOptional = groupRepository.getGroupById(groupId);
+            return groupOptional
+                    .map(Group::getExpenses)
+                    .map(ArrayList::new)  // Defensive copy
+                    .orElseGet(ArrayList::new);
+        } finally {
+            lock.readLock().unlock();
+        }
     }
 
-    /**
-     * Get all expenses a user was part of, across all groups (history view).
-     * Returns expenses where the user either paid or owes money.
-     *
-     * @param userId the user to get expense history for
-     * @return list of all expenses involving this user
-     */
+    // Read operation
     public List<Expense> getUserExpenseHistory(String userId) {
-        List<Expense> userExpenses = new ArrayList<>();
+        lock.readLock().lock();
+        try {
+            List<Expense> userExpenses = new ArrayList<>();
 
-        for (Group group : groupRepository.getAllGroups()) {
-            for (Expense expense : group.getExpenses()) {
-                if (expense.getPaidBy().getUserId().equals(userId)) {
-                    userExpenses.add(expense);
-                } else if (expense.getBalances().stream()
-                        .anyMatch(balance -> balance.getPaidTo().getUserId().equals(userId))) {
-                    userExpenses.add(expense);
+            for (Group group : groupRepository.getAllGroups()) {
+                for (Expense expense : group.getExpenses()) {
+                    if (expense.getPaidBy().getUserId().equals(userId) ||
+                            expense.getBalances().stream()
+                                    .anyMatch(balance -> balance.getPaidTo().getUserId().equals(userId))) {
+                        userExpenses.add(expense);
+                    }
                 }
             }
-        }
 
-        return userExpenses;
+            return userExpenses;
+        } finally {
+            lock.readLock().unlock();
+        }
     }
 }
